<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:hydrogenatom="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_item_share"
        android:title="@string/share"
        android:icon="@android:drawable/ic_menu_share"
        hydrogenatom:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_wiki"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_wiki"
        android:title="@string/information_wiki"
        hydrogenatom:showAsAction="never"/>
    <item
        android:id="@+id/action_rate"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_rate"
        android:title="@string/google_play"
        hydrogenatom:showAsAction="never"/>
    <item
        android:id="@+id/action_information"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/information"
        hydrogenatom:showAsAction="never"/>
    <!-- <item
        android:id="@+id/action_more_apps"
        android:orderInCategory="100"
        android:title="@string/more_apps"/> -->
    <!--    android:showAsAction="never"  -->
    <!--   <item
           android:id="@+id/action_about"
           android:orderInCategory="100"
           android:title="@string/about"/> -->

</menu>
