<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@mipmap/ic_launcher"
        android:scaleType="fitXY"
        android:layout_marginBottom="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_text_1a"
        android:textSize="20dp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:paddingBottom="3dip"
        />

    <TextView
        android:id="@+id/version_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version"
        android:gravity="center_horizontal"
        android:paddingBottom="3dip"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_text_2"
        android:gravity="center_horizontal"
        android:paddingBottom="30dip"
        />

    <ScrollView
        android:id="@+id/SCROLLER_ID"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:fillViewport="true"
        android:layout_weight="1" >

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
            android:text="@string/help_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:autoLink="web"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/wikipedia_link"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="15dp"
                android:drawableLeft="@drawable/ic_action_wiki"
                android:drawablePadding="5dp"
                android:gravity="center"
                android:text="@string/wikipedia_link" />

            <TextView
                android:layout_width = "0dp"
                android:layout_height = "match_parent"
                android:layout_weight = "1"/>

            <TextView
                android:id="@+id/share_link"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:drawableLeft="@android:drawable/ic_menu_share"
                android:drawablePadding="5dp"
                android:gravity="center"
                android:text="@string/share"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/github_link"
                android:text="@string/github_link"
                android:drawableLeft="@drawable/ic_action_github"
                android:drawablePadding="5dp"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/quantumoscillator_link_text"
                android:text="@string/quantumoscillator_link_text"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="0dp"
                />

            <TextView
                android:id="@+id/quantumoscillator_link"
                android:text="@string/quantumoscillator_link"
                android:drawableLeft="@drawable/ic_quantumoscillator"
                android:drawablePadding="5dp"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp" />
        </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <!-- <TextView
            android:id="@+id/google_play_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/google_play_1"
            android:layout_weight="1"/>

        <View
            android:layout_width="5dp"
            android:layout_height="fill_parent" /> -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:id="@+id/google_play"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:drawableLeft="@drawable/ic_action_rate"
                    android:drawablePadding="5dp"
                    android:drawableStart="@drawable/ic_action_rate"
                    android:gravity="center"
                    android:linksClickable="true"
                    android:text="@string/google_play"
                    android:textSize="16dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:id="@+id/more_apps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:drawableLeft="@drawable/ic_action_playstore"
                    android:drawablePadding="5dp"
                    android:drawableStart="@drawable/ic_action_playstore"
                    android:gravity="center"
                    android:linksClickable="true"
                    android:text="@string/more_apps"
                    android:textSize="16dp" />
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</LinearLayout>
