<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.vlvolad.hydrogenatom.HAGLSurfaceView
        android:id="@+id/gl_surface_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|left"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/orbital_name"
            android:text="Orbital name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textColor="#FFFFFF"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"/>
        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_weight="1"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_marginRight="15dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:orientation="vertical"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp" >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:orientation="horizontal">
            <Button
                android:id="@+id/button_random"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/random_orbital"
                android:layout_marginRight="25dp"/>
            <ImageButton
                android:id="@+id/button_regenerate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text=""
                android:src="@drawable/ic_action_replay"
                android:onClick="regenerate"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:orientation="horizontal"
            android:layout_marginTop="5dp" >
            <TextView
                android:id="@+id/textViewPercentName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textColor="#FFFFFF"
                android:text="@string/percent" />

            <SeekBar
                android:id="@+id/seekBarPercent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="98"
                android:layout_marginLeft="5dp" />

            <TextView
                android:id="@+id/textViewPercent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textColor="#FFFFFF"
                android:text="1%"
                android:layout_marginLeft="5dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:orientation="horizontal"
            android:layout_marginTop="5dp" >
            <TextView
                android:id="@+id/textViewStepSizeName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textColor="#FFFFFF"
                android:text="@string/stepsize" />

            <SeekBar
                android:id="@+id/seekBarStepSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="100"
                android:layout_marginLeft="5dp" />

            <TextView
                android:id="@+id/textViewStepSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textColor="#FFFFFF"
                android:text="2.0"
                android:layout_marginLeft="5dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:orientation="horizontal"
            android:layout_marginTop="5dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textColor="#FFFFFF"
                android:text="@string/orbital"
                android:layout_marginRight="0dp"/>

            <Button
                android:id="@+id/button_orbital"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text=" n=1, l=0, m=0 "
                android:layout_marginRight="25dp"/>

            <!--
            <TextView
                android:id="@+id/tvn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textColor="#FFFFFF"
                android:inputType="number"
                android:text="n: "
                android:layout_marginRight="0dp"/>

            <Button
                android:id="@+id/bSubn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:text="-" />

            <TextView
                android:id="@+id/tvnn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textColor="#FFFFFF"
                android:inputType="number"
                android:text="1" />

            <Button
                android:id="@+id/bAddn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:text="+" />

            <TextView
            android:id="@+id/tvl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textColor="#FFFFFF"
            android:inputType="number"
            android:text="l: "
            android:layout_marginLeft="10dp"
            android:layout_marginRight="0dp"/>

            <Button
                android:id="@+id/bSubl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:text="-" />

            <TextView
                android:id="@+id/tvln"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textColor="#FFFFFF"
                android:inputType="number"
                android:text="1" />

            <Button
                android:id="@+id/bAddl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:text="+" />


            <TextView
                android:id="@+id/tvm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textColor="#FFFFFF"
                android:inputType="number"
                android:text="m: "
                android:layout_marginLeft="10dp"
                android:layout_marginRight="0dp"/>

            <Button
                android:id="@+id/bSubm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:text="-" />

            <TextView
                android:id="@+id/tvmn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textColor="#FFFFFF"
                android:inputType="number"
                android:text="1" />

            <Button
                android:id="@+id/bAddm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:text="+" />
                -->

        </LinearLayout>
    </LinearLayout>
</FrameLayout>
